--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "SaasProjectApp" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "Project Manager" %></title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag "application", :media => "all" %>
@@ -25,12 +25,29 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">SaasProjectApp</a>
+        <a class="navbar-brand" href="#">Project Manager</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
-            <li><%= link_to "Link1", "/path1"  %></li>
-            <li><%= link_to "Link2", "/path2"  %></li>
-            <li><%= link_to "Link3", "/path3"  %></li>
+            <% if current_user %>
+              <li>
+                <%= link_to '<i class="fa fa-users"></i> Add Members'.html_safe, new_member_path, class: 'navbar-link btn btn-primary' %>
+              </li>
+            <% end %>
+          </ul>
+          <ul class="nav navbar-right col-md-4">
+            <% if current_user %>
+              <li class="col-md-8 user-name">
+                <%= link_to (' ' + truncate(current_user.email, length: 25)).html_safe, edit_user_registration_path, title: 'Edit Profile', class: 'fa fa-user' %>
+              </li>
+              <li class="col-md-1">&nbsp;</li>
+              <li class="col-md-3 logout">
+                <%= link_to('Logout', destroy_user_session_path, class: 'btn btn-xs btn-danger', title: 'Logout', :method => :delete) %>
+              </li>
+            <% else %>
+              <li class="col-md-4 pull-right">
+                <%= link_to('Sign In', new_user_session_path, class: 'btn btn-primary', title: 'Sign In') %>
+              </li>
+            <% end %>
           </ul>
         </div>
       </div>
@@ -38,26 +55,13 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-lg-9">
+        <div class="col-lg-12">
           <%= bootstrap_flash %>
           <%= yield %>
         </div>
-        <div class="col-lg-3">
-          <div class="well sidebar-nav">
-            <h3>Sidebar</h3>
-            <ul class="nav nav-list">
-              <li class="nav-header">Sidebar</li>
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
-            </ul>
-          </div>
-        </div>
       </div>
 
-      <footer>
-        <p>&copy; Brett Hartman 2018</p>
-      </footer>
+      <footer></footer>
 
     </div>
 
